--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TryMlKit</string>
+    <string name="classification_eyes">Classification - eyes</string>
+    <string name="face_contours">Face contours</string>
+    <string name="language_identification">Language identification</string>
 </resources>
